--- a/styles/businessDashboard.css
+++ b/styles/businessDashboard.css
@@ -70,7 +70,7 @@ body {
 .amount {
     color:#6e6d6d;
     font-size: 20px;
-    margin-top: 1%;
+    margin-top: 1.3%;
     margin-left: 8%;
 
 }
@@ -78,22 +78,22 @@ body {
 .days {
     color:#6e6d6d;
     font-size: 20px;
-    margin-top: 1%;
+    margin-top: 1.3%;
     margin-left: 6%;
 }
 
 .price {
     color:#6e6d6d;
     font-size: 20px;
-    margin-top: 1%;
+    margin-top: 1.3%;
     margin-left: 6%;
 }
 
 .icon {
-    color: white;
-    font-size: 45px;
+    color: #252525 ;
+    font-size: 25px;
     margin-left: 13%;
-    margin-top: 0.3%;
+    margin-top: 1.7%;
 }
 
 .small-box {
