--- a/styles/businessDashboard.css
+++ b/styles/businessDashboard.css
@@ -124,3 +124,9 @@ body {
     background-color: #73A2FF;
     color: white;
 }
+
+.shittyfruitpic{
+    
+    margin-top: 5px;
+    margin-left: 30px;
+}
